# 6axmyT

./: .gitattributes  .gitignore  README.md
.github/workflows/: build.yml
config/: props.conf  targets.conf
docs/: PROFILES.md
magisk-module/: module.prop  uninstall.sh
module/: action.sh  classes.dex  customize.sh  manager.sh  module.prop  modules.conf  pif.conf  post-fs-data.sh  props.conf  service.sh  system.prop  update.json
module/java/src/: EntryPoint.java
module/native/: config.cpp  config.hpp  hooks.cpp  main.cpp  spoof.cpp  spoof.hpp
native/: CMakeLists.txt  config.cpp  hooks.cpp  hooks.hpp  main.cpp
scripts/: build.sh
